--- a/UnitTests/UnitTests.csproj
+++ b/UnitTests/UnitTests.csproj
@@ -63,6 +63,7 @@
   </Choose>
   <ItemGroup>
     <Compile Include="AstrometryTester.cs" />
+    <Compile Include="WeatherTester.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SimbadTester.cs" />
     <Compile Include="SocialMediaTester.cs" />
