--- a/Astrobot/DiscordAstroBot.csproj
+++ b/Astrobot/DiscordAstroBot.csproj
@@ -223,12 +223,14 @@
     <Compile Include="Mappers\Config\ServerCommands.cs" />
     <Compile Include="Mappers\Config\ServerConfig.cs" />
     <Compile Include="Mappers\Config\SocialMediaConfig.cs" />
+    <Compile Include="Mappers\Config\SocialMediaModQueue.cs" />
     <Compile Include="Mappers\Config\TimerJobExecutions.cs" />
     <Compile Include="Mappers\Config\WhiteList.cs" />
     <Compile Include="Mappers\LaunchLibrary\LaunchLibraryAPIHelper.cs" />
     <Compile Include="Helpers\WeatherHelper.cs" />
     <Compile Include="Log.cs" />
     <Compile Include="Objects\Config\SocialMediaConfig.cs" />
+    <Compile Include="Objects\Config\SocialMediaModQueueConfig.cs" />
     <Compile Include="Objects\Config\TimerJobExecutions.cs" />
     <Compile Include="Objects\Config\WhiteList.cs" />
     <Compile Include="Objects\Simbad\AstronomicalObjectInfo.cs" />
@@ -292,6 +294,7 @@
     <Content Include="config\SocialMediaAccounts.xml">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <Content Include="config\SocialMediaModQueue.xml" />
     <Content Include="config\TimerJobExecutions.xml">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
