--- a/Astrobot/packages.config
+++ b/Astrobot/packages.config
@@ -7,6 +7,7 @@
   <package id="Discord.Net.Rpc" version="1.0.2" targetFramework="net46" />
   <package id="Discord.Net.Webhook" version="1.0.2" targetFramework="net46" />
   <package id="Discord.Net.WebSocket" version="1.0.2" targetFramework="net46" />
+  <package id="Facebook" version="7.0.6" targetFramework="net461" />
   <package id="InstaSharper" version="1.4.0" targetFramework="net461" />
   <package id="log4net" version="2.0.8" targetFramework="net452" />
   <package id="Microsoft.Bcl" version="1.1.10" targetFramework="net452" />
